# wiklunddidriksen

./: .gitignore  CHATBOT_SETUP.md  CNAME  ONE_COM_DNS_SETUP.md  README.md  assets.js  chat-config.js  chat-widget.js  content.js  index.html  package.json  script.js  styles.css
affe/: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt  setup.py
affe/docs/: OUTLOOK_AUTH.md  UI_AND_VOICE.md
affe/scripts/: setup_venv.sh
affe/src/affe/: __init__.py  main.py  manager.py  ui.py
affe/src/affe/web_ui/templates/: index.html
affe/src/notes_agent/: __init__.py  capabilities.py
affe/src/outlook_agent/: __init__.py  auth.py  capabilities.py  config.py  graph_client.py
affe/src/search_agent/: __init__.py  capabilities.py
affe/src/time_agent/: __init__.py  capabilities.py
affe/src/weather_agent/: __init__.py  capabilities.py
api/: chat.js
assets/cv/: cv.md
jwd-info/: CHATBOT_SETUP.md  CNAME  DNS_SETUP.md  GOOGLE_DOMAINS_SETUP.md  ONE_COM_DNS_SETUP.md  SQUARESPACE_DNS_SETUP.md  chat-config.js  content.js  index.html
jwd-info/api/: chat.js
jwd-info/assets/flip card texts/: project 3 card texts  project1 card texts  project2 card texts
